# openapi-embeddings-based-search-example

./: .gitignore  README.md  dataset.py  main.py  pyproject.toml
